--- a/package.json
+++ b/package.json
@@ -2,6 +2,8 @@
   "name": "backend-crud",
   "version": "1.0.0",
   "main": "index.js",
+  "type": "module",
+  "requires": true,
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "server": "node index.js",
@@ -13,7 +15,8 @@
   "description": "",
   "dependencies": {
     "express": "^5.1.0",
-    "mongodb": "^6.18.0"
+    "mongodb": "^6.18.0",
+    "mongoose": "^8.16.5"
   },
   "devDependencies": {
     "nodemon": "^3.1.10"
